# LiveTikZ

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  ZoomImage.cpp  ZoomImage.h  ZoomScrollImage.cpp  ZoomScrollImage.h  main.cpp  mainwindow.cpp  mainwindow.h  makedeb.sh  resource.qrc
.github/workflows/: ci.yml
cmake/: ECMFindModuleHelpersStub.cmake  FindPoppler.cmake
data/: livetikz.desktop
data/templates/: template_beamer.pgs  template_example.pgs
docs/: debian-control  livetikz.1
modules/: ECMFindModuleHelpers.cmake
templates/: template_example.pgs
